# gsvd

./: .gitignore  README.md  pyproject.toml
src/gsvd/: core.py
tests/: cs_cs.py  cs_cs2.py  cs_full.py  gsvd.py
