[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsvd"
version = "0.0.1"
authors = [
  { name="Santiago Federico Caracciolo", email="santiago.caracciolo@gmail.com" },
]
description = "A SciPy implementation of the Generalized Singular Value Decomposition (GSVD) based on cosine-sine decomposition"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "scipy"
]